--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div id="vanta-bg" class="min-h-screen flex items-center justify-center relative">
         <div class="hero-overlay absolute inset-0"></div>
         <div class="container mx-auto px-6 z-10 text-center" data-aos="fade-up" data-aos-duration="1500">
-            <h1 class="text-5xl md:text-7xl font-bold title-font mb-6 tracking-widest">blood.twin</h1>
+            <h1 class="text-5xl md:text-7xl font-bold title-font mb-6 tracking-widest">testing 123</h1>
             <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">Enigmatic London Solo Artist Weaving Dark, Atmospheric Soundscapes & Exploring Gothic Introspection.</p>
             <div class="flex justify-center space-x-4">
                 <a href="http://bloodtwin.bandcamp.com" target="_blank" class="px-6 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition">Listen Now</a>
