--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <nav class="fixed w-full z-50 bg-black bg-opacity-80 backdrop-blur-md py-4 px-6">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="title-font gradient-text text-xl md:text-2xl font-bold whitespace-nowrap tracking-normal"> • • • B L O O D . T W I N • • •</a>
+            <a href="#" class="title-font gradient-text text-lg sm:text-xl md:text-2xl font-bold whitespace-nowrap tracking-normal"> • • • B L O O D . T W I N • • •</a>
             
             <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-8 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
                 <a href="#" class="nav-link text-white hover:text-red-400 transition">Home</a>
@@ -136,7 +136,7 @@
     <div id="vanta-bg" class="min-h-screen flex items-center justify-center relative">
         <div class="hero-overlay absolute inset-0"></div>
         <div class="container mx-auto px-6 z-10 text-center" data-aos="fade-up" data-aos-duration="1500">
-            <h1 class="text-3xl md:text-5xl font-bold title-font mb-6 tracking-normal whitespace-nowrap">• • • B L O O D . T W I N • • •</h1>
+            <h1 class="text-2xl sm:text-4xl md:text-5xl font-bold title-font mb-6 tracking-normal">• • • B L O O D . T W I N • • •</h1>
             <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">Enigmatic London Solo Artist Weaving Dark, Atmospheric Soundscapes & Exploring Gothic Introspection.</p>
             <div class="flex justify-center space-x-4">
                 <a href="http://bloodtwin.bandcamp.com" target="_blank" class="px-6 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition">Listen Now</a>
