--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="container mx-auto">
             <div class="flex flex-col md:flex-row justify-between items-center text-center md:text-left">
                 <div class="mb-6 md:mb-0">
-                    <h3 class="text-2xl font-bold title-font gradient-text tracking-wider">blood.twin</h3>
+                    <h3 class="text-lg md:text-xl font-bold title-font gradient-text tracking-normal whitespace-nowrap">• • • B L O O D . T W I N • • •</h3>
                     <p class="text-gray-400 mt-2">Goth Rock • Darkwave • Post-Punk</p>
                 </div>
                 
