--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
     <nav class="fixed w-full z-50 bg-black bg-opacity-80 backdrop-blur-md py-4 px-6">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="title-font gradient-text text-base sm:text-lg md:text-2xl font-bold whitespace-nowrap tracking-normal" style="transform: translateX(-10px);"> • • • B L O O D . T W I N • • •</a>
+            <a href="#" class="title-font gradient-text text-base sm:text-lg md:text-xl lg:text-2xl font-bold whitespace-nowrap tracking-normal" style="transform: translateX(-10px);"> • • • B L O O D . T W I N • • •</a>
             
-            <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-8 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
-                <a href="#" class="nav-link text-white hover:text-red-400 transition">Home</a>
-                <a href="#live" class="nav-link text-white hover:text-red-400 transition">Live</a>
-                <a href="#about" class="nav-link text-white hover:text-red-400 transition">About (EPK)</a>
-                <a href="#store" class="nav-link text-white hover:text-red-400 transition">Store</a>
-                <a href="#contact" class="nav-link text-white hover:text-red-400 transition">Contact</a>
+            <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-4 lg:space-x-8 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
+                <a href="#" class="nav-link text-white hover:text-red-400 transition md:text-sm lg:text-base">Home</a>
+                <a href="#live" class="nav-link text-white hover:text-red-400 transition md:text-sm lg:text-base">Live</a>
+                <a href="#about" class="nav-link text-white hover:text-red-400 transition md:text-sm lg:text-base">About (EPK)</a>
+                <a href="#store" class="nav-link text-white hover:text-red-400 transition md:text-sm lg:text-base">Store</a>
+                <a href="#contact" class="nav-link text-white hover:text-red-400 transition md:text-sm lg:text-base">Contact</a>
             </div>
             
             <div class="flex items-center">
