--- a/index.html
+++ b/index.html
@@ -201,9 +201,9 @@
                     <a href="https://redbubble.com/people/bloodtwin" target="_blank" title="Merch (T-Shirts, etc.)" class="text-gray-400 hover:text-red-400 transition">
                         <img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/t-shirt.png" alt="T-shirt icon" style="width: 24px; height: 24px;"/>
                     </a>
-                    <a href="https://www.youtube.com/@bloodtwinmusic" target="_blank" title="YouTube" class="text-gray-400 hover:text-red-400 transition"><i data-feather="youtube"></i></a>
+                    <a href="https://youtube.com/@bloodtwinmusic" target="_blank" title="YouTube" class="text-gray-400 hover:text-red-400 transition"><i data-feather="youtube"></i></a>
                     <a href="https://open.spotify.com/artist/2BTmz7OsOYsnGgrLMeU4QB" target="_blank" title="Spotify" class="text-gray-400 hover:text-red-400 transition"><i data-feather="play-circle"></i></a>
-                    <a href="https://www.instagram.com/blood.twin.music/" target="_blank" title="Instagram" class="text-gray-400 hover:text-red-400 transition"><i data-feather="instagram"></i></a>
+                    <a href="https://instagram.com/blood.twin.music/" target="_blank" title="Instagram" class="text-gray-400 hover:text-red-400 transition"><i data-feather="instagram"></i></a>
                     <a href="https://facebook.com/bloodtwin" target="_blank" title="Facebook" class="text-gray-400 hover:text-red-400 transition"><i data-feather="facebook"></i></a>
                     <a href="mailto:blood.twin@hotmail.com" title="Email" class="text-gray-400 hover:text-red-400 transition"><i data-feather="mail"></i></a>
                 </div>
@@ -215,7 +215,7 @@
             </div>
 
             <div class="text-center text-xs text-gray-600 mt-8 pt-8 border-t border-gray-800">
-                Icons made from <a href="https://www.onlinewebfonts.com/icon" target="_blank" rel="noopener noreferrer" class="underline hover:text-red-400">svg icons</a> is licensed by CC BY 4.0
+                Icons made from <a href="https://onlinewebfonts.com/icon" target="_blank" rel="noopener noreferrer" class="underline hover:text-red-400">svg icons</a> is licensed by CC BY 4.0
             </div>
         </div>
     </footer>
