--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 
     <nav class="fixed w-full z-50 bg-black bg-opacity-80 backdrop-blur-md py-4 px-6">
         <div class="container mx-auto flex justify-between items-center">
-            <a href="#" class="title-font gradient-text text-lg sm:text-xl md:text-2xl font-bold whitespace-nowrap tracking-normal"> • • • B L O O D . T W I N • • •</a>
+            <a href="#" class="title-font gradient-text text-2xl font-bold whitespace-nowrap tracking-normal">•••BLOOD.TWIN•••</a>
             
-            <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-6 lg:space-x-8 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
+            <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-8 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
                 <a href="#" class="nav-link text-white hover:text-red-400 transition">Home</a>
                 <a href="#live" class="nav-link text-white hover:text-red-400 transition">Live</a>
                 <a href="#about" class="nav-link text-white hover:text-red-400 transition">About</a>
@@ -129,16 +129,11 @@
 
     <div id="vanta-bg" class="min-h-screen flex items-center justify-center relative">
         <div class="hero-overlay absolute inset-0"></div>
-        <div class="container mx-auto z-10 text-center" data-aos="fade-up" data-aos-duration="1500">
-            <h1 class="flex justify-center items-center text-2xl sm:text-4xl md:text-5xl lg:text-6xl font-bold title-font mb-6 tracking-normal whitespace-nowrap">
-                <span>• • • B L O O D</span>
-                <span class="mx-4">.</span>
-                <span>T W I N • • •</span>
-            </h1>
-            <div class="px-6"> <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">Enigmatic London Solo Artist Weaving Dark, Atmospheric Soundscapes & Exploring Gothic Introspection.</p>
-                <div class="flex justify-center space-x-4">
-                    <a href="http://bloodtwin.bandcamp.com" target="_blank" class="px-6 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition">Listen Now</a>
-                </div>
+        <div class="container mx-auto px-6 z-10 text-center" data-aos="fade-up" data-aos-duration="1500">
+            <h1 class="text-5xl md:text-7xl font-bold title-font mb-6 tracking-normal">•••BLOOD.TWIN•••</h1>
+            <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">Enigmatic London Solo Artist Weaving Dark, Atmospheric Soundscapes & Exploring Gothic Introspection.</p>
+            <div class="flex justify-center space-x-4">
+                <a href="http://bloodtwin.bandcamp.com" target="_blank" class="px-6 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition">Listen Now</a>
             </div>
         </div>
     </div>
@@ -201,9 +196,9 @@
                     <a href="https://redbubble.com/people/bloodtwin" target="_blank" title="Merch (T-Shirts, etc.)" class="text-gray-400 hover:text-red-400 transition">
                         <img src="https://img.icons8.com/ios-glyphs/30/FFFFFF/t-shirt.png" alt="T-shirt icon" style="width: 24px; height: 24px;"/>
                     </a>
-                    <a href="https://youtube.com/@bloodtwinmusic" target="_blank" title="YouTube" class="text-gray-400 hover:text-red-400 transition"><i data-feather="youtube"></i></a>
+                    <a href="https://www.youtube.com/@bloodtwinmusic" target="_blank" title="YouTube" class="text-gray-400 hover:text-red-400 transition"><i data-feather="youtube"></i></a>
                     <a href="https://open.spotify.com/artist/2BTmz7OsOYsnGgrLMeU4QB" target="_blank" title="Spotify" class="text-gray-400 hover:text-red-400 transition"><i data-feather="play-circle"></i></a>
-                    <a href="https://instagram.com/blood.twin.music/" target="_blank" title="Instagram" class="text-gray-400 hover:text-red-400 transition"><i data-feather="instagram"></i></a>
+                    <a href="https://www.instagram.com/blood.twin.music/" target="_blank" title="Instagram" class="text-gray-400 hover:text-red-400 transition"><i data-feather="instagram"></i></a>
                     <a href="https://facebook.com/bloodtwin" target="_blank" title="Facebook" class="text-gray-400 hover:text-red-400 transition"><i data-feather="facebook"></i></a>
                     <a href="mailto:blood.twin@hotmail.com" title="Email" class="text-gray-400 hover:text-red-400 transition"><i data-feather="mail"></i></a>
                 </div>
@@ -215,7 +210,7 @@
             </div>
 
             <div class="text-center text-xs text-gray-600 mt-8 pt-8 border-t border-gray-800">
-                Icons made from <a href="https://onlinewebfonts.com/icon" target="_blank" rel="noopener noreferrer" class="underline hover:text-red-400">svg icons</a> is licensed by CC BY 4.0
+                Icons made from <a href="https://www.onlinewebfonts.com/icon" target="_blank" rel="noopener noreferrer" class="underline hover:text-red-400">svg icons</a> is licensed by CC BY 4.0
             </div>
         </div>
     </footer>
