--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 </head>
 <body class="antialiased overflow-x-hidden">
 
-    <nav class="fixed w-full z-50 bg-black bg-opacity-80 backdrop-blur-md py-4 px-6">
-        <div class="container mx-auto flex justify-between items-center">
+    <nav class="fixed w-full z-50 bg-black bg-opacity-80 backdrop-blur-md">
+        <div class="w-full flex justify-between items-center px-6 py-4">
             <a href="#" class="title-font gradient-text text-lg sm:text-xl md:text-2xl font-bold whitespace-nowrap tracking-normal"> • • • B L O O D . T W I N • • •</a>
             
-            <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-4 lg:space-x-6 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
+            <div id="mobile-menu" class="flex flex-col items-end space-y-4 md:flex-row md:items-center md:space-y-0 md:space-x-6 lg:space-x-8 absolute md:static top-full right-0 w-auto md:w-auto bg-black bg-opacity-95 md:bg-transparent p-6 md:p-0 rounded-b-lg md:rounded-none transform transition-all duration-300 ease-out opacity-0 -translate-y-4 md:opacity-100 md:translate-y-0 pointer-events-none md:pointer-events-auto">
                 <a href="#" class="nav-link text-white hover:text-red-400 transition">Home</a>
                 <a href="#live" class="nav-link text-white hover:text-red-400 transition">Live</a>
                 <a href="#about" class="nav-link text-white hover:text-red-400 transition">About</a>
