--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
                 <span>T W I N • • •</span>
             </h1>
             <div class="px-6"> <p class="text-xl md:text-2xl mb-8 max-w-3xl mx-auto">Enigmatic London Solo Artist Weaving Dark, Atmospheric Soundscapes & Exploring Gothic Introspection.</p>
-                <div class="flex justify-center space-x-4">
-                    <a href="http://bloodtwin.bandcamp.com" target="_blank" class="px-6 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition">Listen Now</a>
+                <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
+                    <a href="http://bloodtwin.bandcamp.com" target="_blank" class="px-8 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition w-full sm:w-auto">Listen Now</a>
+                    <a href="epk.html" class="px-8 py-3 border border-white hover:bg-white hover:text-black text-white rounded-full font-medium transition w-full sm:w-auto">EPK</a>
                 </div>
             </div>
         </div>
@@ -158,7 +159,7 @@
             <h2 class="text-3xl md:text-4xl font-bold title-font mb-8" data-aos="fade-up">ABOUT</h2>
             <div class="max-w-3xl mx-auto" data-aos="fade-up" data-aos-delay="100">
                 <p class="text-lg text-gray-300 mb-8 leading-relaxed">For a detailed biography, press coverage, high-resolution photos, and full discography, please view the official Electronic Press Kit (EPK).</p>
-                <a href="https://bloodtwin.vercel.app" target="_blank" class="inline-block px-8 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition text-lg">View Full EPK</a>
+                <a href="epk.html" class="inline-block px-8 py-3 bg-red-700 hover:bg-red-800 text-white rounded-full font-medium transition text-lg">View Full EPK</a>
             </div>
         </div>
     </section>
