--- a/index.html
+++ b/index.html
@@ -260,5 +260,8 @@
             });
         });
     </script>
+    
+    <script defer src="/_vercel/insights/script.js"></script> 
+    
 </body>
 </html>
