--- a/index.html
+++ b/index.html
@@ -11,15 +11,13 @@
     <link rel="shortcut icon" href="/static/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/static/apple-touch-icon.png" />
     <link rel="manifest" href="/static/site.webmanifest" />
-    <meta name="application-name" content="blood.twin">
+    <meta name="application-name" content="blood.twin OFFICIAL SITE">
     <!-- FAVICON LINKS END -->
     
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 
     <style>
         /* This rule loads your custom font from the 'fonts' folder. */
@@ -135,7 +133,7 @@
         </div>
     </nav>
 
-    <div id="vanta-bg" class="min-h-screen flex items-center justify-center relative">
+    <div class="min-h-screen flex items-center justify-center relative">
         <div class="hero-overlay absolute inset-0"></div>
         <div class="container mx-auto z-10 text-center" data-aos="fade-up" data-aos-duration="1500">
             <h1 class="flex justify-center items-center text-2xl sm:text-4xl md:text-5xl lg:text-6xl font-bold title-font mb-6 tracking-normal whitespace-nowrap">
@@ -232,22 +230,6 @@
     <script>
         AOS.init({ once: true });
         feather.replace();
-    </script>
-    <script>
-        VANTA.GLOBE({
-            el: "#vanta-bg",
-            mouseControls: true,
-            touchControls: true,
-            gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            scale: 1.00,
-            scaleMobile: 1.00,
-            color: 0x991b1b,
-            color2: 0x0,
-            backgroundColor: 0x0,
-            size: 0.7
-        })
     </script>
     <script>
         // Mobile Menu Toggle
